--- a/src/app/spotbie/read-about/read-about.component.html
+++ b/src/app/spotbie/read-about/read-about.component.html
@@ -55,7 +55,7 @@
                 <span class='spotbie-search-click' (click)="searchFood()">Search Places to Eat</span>        
             </p>   
 
-            
+            <app-single-ad></app-single-ad>
 
             <h2 class="HA spotbieAddPointerCursor" id="events">
                 <span class="dfg">Connecting Users to Events</span>
@@ -69,8 +69,8 @@
                 <span class='spotbie-search-click' (click)="searchEvents()">Search Events</span>
             </p>  
 
+            <app-single-ad></app-single-ad>
             
-
             <!-- <h2 class="HA spotbieAddPointerCursor" (click)="openSlideShow(0);">
                 <span class="dfg">Monetizable Profiles</span>
             </h2>                                                
@@ -150,7 +150,7 @@
                 <span class='spotbie-search-click' (click)="searchRetail()">Search Retail Shops</span>      
             </p>                         
 
-            
+            <app-single-ad></app-single-ad>
 
             <h2 class="HA spotbieAddPointerCursor" id="people">
 
