--- a/src/app/spotbie/ads/single-ad/single-ad.component.html
+++ b/src/app/spotbie/ads/single-ad/single-ad.component.html
@@ -1,2 +1,5 @@
-<div class='spotbie-ad-wrapper' [innerHTML]="ad.content">
+<div class='spotbie-ad-wrapper' 
+    [innerHTML]="ad.content"
+    *ngIf="displayAd"
+    (click)="openAd()">
 </div>
