--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -45,6 +45,10 @@
     margin-top: 20px;
     font-size: 46px;
 }
+.fa-share{
+    margin-top: 20px;
+    font-size: 46px;
+}
 .spotbie-info-object-title{
     position: relative;
     margin: 0 auto;
