--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -1,3 +1,137 @@
+.spotbie-repost-title{
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 20px;
+}
+.spotbie-copy-link-button{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    cursor: pointer;
+    text-align: center;
+}
+.spotbie-share-post-link{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    cursor: pointer;
+}
+.spotbie-input{
+    width: 550px;
+    min-width: 550px;
+    max-width: 550px;
+    background-color: rgba(0,0,0,0.23);
+    color: white;
+    cursor: pointer;
+    border-left: 0px;
+    border-right: 0px;
+    border-radius: 0px;
+    border-bottom: 1px solid #adadad96;
+    border-top: 1px solid #adadad96;    
+}
+.spotbie-share-button{
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 99%;
+    padding: 15px;
+    min-width: 48px;
+    border: none;
+    box-shadow: 0px 0px 12px #ffffff45;
+    cursor: pointer;
+}
+.spotbie-share-buttons-wrappper{
+    margin-top: 40px;
+    text-align: center;
+}
+.spotbie-media-caption{
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 550px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;    
+}
+.spotbie-media-description{
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 550px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;    
+}
+.spotbie-album-media-image-wrapper{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    height: 100%;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    text-align: center;
+    z-index: -1;
+}
+.spotbie-album-media-image{
+    position: relative;
+    display: block;
+    margin: 0 auto;
+    margin-top: 30px;
+    max-width: 650px;
+    max-height: 550px;
+    height: 550px;
+}
+.spotbie-album-media-image-wrapper{
+    position: fixed;
+    margin: 0 auto;
+    min-width: 100%;
+    width: 100%;
+    max-width: 100%;
+    min-height: 100%; 
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    background-attachment: fixed !important;
+    text-align: center;
+}
+.spotbie-overlay-window{
+    padding-top: 0px;
+    padding-bottom: 140px;
+}
+.spotbie-album-media-image-blur{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.88);
+    z-index: -1;
+}
+.spotbie-info-object-image{
+    position: relative;
+    margin: 0 auto;
+    width: 300px;
+    min-width: 300px;
+    max-width: 300px;
+    height: 300px;
+    min-height: 300px;
+    background-size: cover !important;
+    background-position: center !important;
+}
+
 .spotbie-overlay-window{
     padding-bottom: 100px;
     z-index: 9999998;
@@ -123,6 +257,8 @@
     position: relative;
     margin: 0 auto;
     margin-top: 20px;
+    max-width: 200px;
+    cursor: pointer;
 }
 .spotbie-info-object-address{
     position: relative;
@@ -130,15 +266,13 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.spotbie-info-object-buttons{
-    cursor: pointer;
-}
 .spotbie-info-object-buttons i{
     margin-left: 30px;
     margin-right: 30px;
     font-size: 30px;
     margin-top: 40px;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 .spotbie-button{
     background-color: rgba(0,0,0,.5);
@@ -218,9 +352,14 @@
         background-attachment: scroll !important;   
         padding-bottom: 50px !important;
     }
+    .spotbie-input{
+        width: 92%;
+        min-width: 92%;
+        max-width: 92%;        
+    }     
 }
 @media (max-width: 460px) { 
-    
+   
 }
 @media (max-width: 420px) { 
   
